# brand-sniper-monorepo

./: .dockerignore  .env.example  .gitignore  AGENTS.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  README.md  SECURITY.md  conftest.py  main.py  mypy.ini  pyproject.toml
.agents/: AGENTS.md
.github/: dependabot.yml  labeler.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: ci.yml  codeql.yml  labeler.yml  stale.yml
apps/analytics/: .env.example  Dockerfile  README.md  evaluate_performance.py  long_term_macro.py  pyproject.toml  seed_historical.py  tools.py  update_baselines.py  validate_historical.py  verify_seed_historical.py
apps/analytics/tests/: test_cfo.py
apps/backend/: .env.example  Dockerfile  README.md  agent.py  database.py  executor.py  grafana_dashboard.json  main.py  pyproject.toml  queries.py  rules_engine.py  schemas.py  telemetry.py  tools.py
apps/backend/tests/: test_agent.py  test_executor.py  test_main.py  test_rules_engine.py
apps/listener/: .env.example  Dockerfile  README.md  executor.py  listener_telemetry.py  main.py  models.py  pyproject.toml  rules_engine.py
apps/listener/scrapers/: base.py  factory.py  skinport.py
apps/listener/scrapers/skinport_websocket/: package-lock.json  package.json  sidecar.js
apps/listener/tests/: test_executor.py  test_rules_engine.py  test_skinport_cache.py  test_zscore.py
deployments/: alembic.ini
deployments/edge-stack/: docker-compose.override.example.yml  docker-compose.yml
deployments/migrations/: README  env.py
deployments/migrations/versions/: 416f6e55f454_add_simulated_trades.py  4dbe99d0947c_create_macro_baselines_table.py  91ce9a538078_create_initial_tables.py
deployments/pi5-stack/: docker-compose.yml
deployments/server-stack/: docker-compose.override.example.yml  docker-compose.yml  mlflow.Dockerfile
deployments/server-stack/config/: alerting_rules.yml  prometheus.yml
deployments/server-stack/config/grafana/dashboards/: dashboard.yml  sniper_dashboard.json
deployments/windows-stack/: docker-compose.yml
deployments/windows-stack/config/: prometheus.yml
docs/: architecture.md  deployment.md  getting-started.md
