[project]
name = "brand-sniper-monorepo"
version = "0.1.0"
description = "Algorithmic Market Sniping & Macro Arbitrage Engine"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "alembic>=1.18.5",
]

[tool.uv.workspace]
members = [
    "apps/*",
    "packages/*"
]

[dependency-groups]
dev = [
    "ruff>=0.11.0",
    "mypy>=1.15.0",
]

[tool.pytest.ini_options]
filterwarnings = [
    "ignore::UserWarning:prefect.*",
    'ignore:.*httpx.*:UserWarning',
]
pythonpath = [
    "packages/shared_utils/src",
    "apps/backend",
    "apps/listener",
    "apps/analytics",
]

[tool.ruff]
line-length = 128
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "B"]
ignore = ["E402"]

[tool.ruff.format]
quote-style = "double"


