[project]
name = "brand-sniper-monorepo"
version = "0.1.0"
description = "Algorithmic Market Sniping & Macro Arbitrage Engine"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "alembic>=1.18.5",
    "gitpython>=3.1.52",
]

[tool.uv.workspace]
members = [
    "apps/*",
    "packages/*"
]

[dependency-groups]
dev = [
    "ruff>=0.15.22",
    "mypy>=2.3.0",
]

[tool.pytest.ini_options]
filterwarnings = [
    "ignore::UserWarning:prefect.*",
    'ignore:.*httpx.*:UserWarning',
]
pythonpath = [
    "packages/shared_utils/src",
    "apps/analytics",
    "apps/listener",
]

[tool.ruff]
line-length = 128
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "B"]
ignore = ["E402"]

[tool.ruff.format]
quote-style = "double"


