[project]
name = "analytics"
version = "0.1.0"
description = "Macro Analytics, Forecasting, and Ingestion Engine"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "shared-utils",
    "pandas>=2.2.0",
    "prefect>=3.7.7",
    "mcp>=1.28.1",
    "fastmcp>=3.4.2",
    "google-genai>=2.10.0",
    "mlflow>=3.14.0",
    "redis>=5.0.0",
    "aiohttp>=3.9.0",
    "python-dotenv>=1.0.0",
]

[tool.uv.sources]
shared-utils = { workspace = true }

[dependency-groups]
dev = [
    "pytest>=9.1.1",
    "pytest-asyncio>=1.4.0",
    "pytest-mock>=3.15.1",
]
