[project]
name = "backend"
version = "0.1.0"
description = "Core Compute Engine REST API & FastMCP Agent Server"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.139.0",
    "uvicorn[standard]>=0.50.0",
    "shared-utils",
    "google-genai>=2.10.0",
    "fastmcp>=3.4.2",
    "mlflow>=3.14.0",
    "prometheus-client>=0.25.0",
]

[tool.uv.sources]
shared-utils = { workspace = true }

[dependency-groups]
dev = [
    "pytest>=9.1.1",
    "pytest-asyncio>=1.4.0",
    "pytest-mock>=3.15.1",
    "aiosqlite>=0.20.0",
]
