[project]
name = "listener"
version = "0.1.0"
description = "24/7 Edge Telemetry & Real-Time Ingestion Daemon"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "redis>=5.0.0",
    "aiohttp>=3.9.0",
    "pydantic>=2.0.0",
    "brotli>=1.1.0", # for Skinport
    "shared-utils",
]

[tool.uv.sources]
shared-utils = { workspace = true }