[project]
name = "listener"
version = "0.1.0"
description = "24/7 Edge Telemetry & Real-Time Ingestion Daemon"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "redis>=5.0.0",
    "aiohttp>=3.9.0",
    "pydantic>=2.0.0",
    "brotli>=1.1.0", # for Skinport
    "python-dotenv>=1.0.0",
    "prometheus-client>=0.25.0",
    "shared-utils",
]

[tool.uv.sources]
shared-utils = { workspace = true }

[dependency-groups]
dev = [
    "pytest>=9.1.1",
    "pytest-asyncio>=1.4.0",
    "pytest-mock>=3.15.1",
]
